# work-timer

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml  work-timer.ahk
src/: error.rs  logger.rs  main.rs
src/app/: mod.rs  widget.rs
src/app/daemon/: mod.rs
src/app/daemon/message/: daemon.rs  load.rs  mod.rs  save.rs  window.rs
src/app/settings/: message.rs  mod.rs
src/app/timer/: clock.rs  message.rs  mod.rs  widget.rs
src/assets/: mod.rs
src/assets/fonts/: mod.rs
src/assets/icons/: mod.rs
src/assets/icons/mdi/: ATTRIBUTION
src/platform/: common.rs  mod.rs
src/platform/linux/: error.rs  mod.rs
src/platform/windows/: error.rs  mod.rs
src/state/: config.rs  mod.rs  precison.rs
