[package]
name = "work-timer"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/mass8326/work-timer"
license = "GPL-2.0-or-later"

[dependencies]
dark-light = "2.0.0"
derive_more = { version = "2.0.1", features = ["from"] }
directories = "6.0.0"
futures = "0.3.31"
futures-core = "0.3.31"
iced = { version = "0.13.1", features = ["advanced", "image", "svg", "tokio"] }
iced_core = "0.13.2"
iced_runtime = { version = "0.13.2", features = ["multi-window"] }
serde = { version = "1.0.218", features = ["derive"] }
sipper = "0.1.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["sync"] }
toml = "0.8.20"
x11rb = { version = "0.13.1", features = ["screensaver"] }
winsafe = { version = "0.0.22", features = ["kernel", "user"] }
windows = { version = "0.60.0", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
] }
windows-core = "0.60.1"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rfd = "0.15.2"
log = "0.4.26"
flexi_logger = "0.29.8"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
match_bool = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unused_self = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
