[package]
name = "work-timer"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/mass8326/work-timer"
license = "GPL-2.0-or-later"

[dependencies]
dark-light = "2.0.0"
derive_more = { version = "2.0.1", features = ["from"] }
directories = "6.0.0"
flexi_logger = "0.31.7"
futures = "0.3.31"
futures-core = "0.3.31"
iced = { version = "0.13.1", features = ["advanced", "image", "svg", "tokio"] }
iced_core = "0.13.2"
iced_runtime = { version = "0.13.2", features = ["multi-window"] }
log = "0.4.28"
rfd = "0.15.4"
rust_decimal = { version = "1.39.0", features = ["serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
sipper = "0.1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
toml = "0.9.8"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.2", features = ["screensaver"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
] }
windows-core = "0.62.2"
winsafe = { version = "0.0.26", features = ["kernel", "user"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-test",
]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
match_bool = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unused_self = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
